---------------------------------------------------------------------------
CHANGELOG: curn (Customizable Utilitarian RSS Notifier)

$Id$

Copyright (c) 2004-2007 Brian M. Clapper. All rights reserved.
---------------------------------------------------------------------------

Version 3.2 (...)

- Minor refinements to the use of concurrent download threads.


---------------------------------------------------------------------------
Version 3.1 (29 November, 2006)

			       ------------
			       Enhancements
			       ------------

- curn's multithreaded download logic now uses the java.util.concurrent
  library, instead of native Java synchronization. While this change won't
  necessarily improve performance for small numbers of feeds and threads,
  it should permit curn to scale better to large numbers of feeds. Improving
  concurrency and performance is an ongoing effort; expect more changes in
  this area in subsequent releases.

- The configuration file parser now supports "${var?default value}" syntax.
  In that example, if "${var}" does not have a value, or has an empty
  value, the string "default value" will be substituted.

- The configuration file specified on the curn command line can now be
  a path or a URL. (Previously, curn only accepted a path.)

- curn's ScriptOutputHandler now supports both the Apache Jakarta Bean
  Scripting Framework and the Java 6 (JSR 223) javax.script scripting
  framework. The Java 6 scripting framework requires Java 6, obviously.
  By default, the ScriptOutputHandler first tries to use the javax.script
  infrastructure; if that doesn't work, it tries to the BSF infrastructure.
  You can force it to try just one of them with the (new) optional
  "ScriptingAPI" configuration directive. That directive takes two possible
  values:

           javax.script - use the Java 6 scripting framework, and abort
                          if it's not available
           bsf          - use the Bean Scripting Framework, and abort if